# tissueviewer

./: .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  MIGRATION.md  README.md  environment.yml  meta.yaml  pyproject.toml  requirements.txt  server.py  setup.cfg  supervisor.conf
.claude/: launch.json
.github/workflows/: push.yml  release.yml
.kilo/plans/: 1775992149357-witty-comet.md  1775994890517-shiny-river.md  1776511382735-crisp-mountain.md  1776512325887-lucky-moon.md
OmeZarrConnector/: read-raw.ipynb
OmeZarrConnector/connector/: connect.py
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.vue  main.js
client/src/components/: ChannelHistogram.vue  LogSlider.vue
client/src/lib/: apiConnection.js
client/src/router/: index.js
client/src/store/: index.js
client/src/store/modules/: manageFiles.js  slideContent.js  uploadSlide.js
client/src/views/: SlideViewer.vue  SlideViewerNew.vue  slideView.vue  uploadView.vue
cloud-deploy/: Dockerfile  README.md  requirements.txt
publication/: TissueViewer data benchmark - Sheet1.csv  TissueViewer data benchmark.csv  data-benchmark.csv  data-benchmark.ipynb
scripts/: sync_client.py
segmentation/: deepcell.sh  deepcell_local.sh  segmentation_and_clustering.ipynb
segmentation/masks/: 11_27.tif
server/: ome-server.py  requirements.txt  run_ome_server_local.sh  run_server_local.sh  run_watch_folder.sh  server.py  watch_folder.py
server/OmeZarrConnector/: read-raw.ipynb  requirements.txt
server/OmeZarrConnector/connector/: connect.py
server/helpers/: move_to_completed.py  process_ome_tiff.py  process_tiff.py  server_helpers.py
src/ImmunoViewer/: _version.py  process_folder.py  process_ome_tiff.py  server.py  tile.py  watch_folder.py  watch_folder_docker.py
src/ImmunoViewer/client/: index.html
src/ImmunoViewer/client/assets/: SlideViewer-44b07d73.js  SlideViewer-4db2fbd9.js  SlideViewer-acc75342.js  SlideViewer-c345c42b.js  SlideViewer-cac74aba.js  SlideViewer-d9842cde.js  SlideViewer-dfaf7abb.js  SlideViewerNew-2d6a5d9a.js  SlideViewerNew-7aec11c6.js  SlideViewerNew-ec6e481a.js  index-1a44217b.js  index-26efefc2.js  index-36ec0fef.js  index-8ddde4e4.js  index-d030ddc6.js  index-d0c0c412.js  index-e299d4d6.js  index-e540ed02.js
src/tissueviewer/: __init__.py  __main__.py  app.py  auth.py  browser.py  cli.py  config.py  discovery.py  logging_setup.py  metadata.py  server.py  validation.py  watcher.py
src/tissueviewer/formats/: __init__.py  base.py  ome_tiff.py
src/tissueviewer/routes/: __init__.py  client.py  histogram.py  samples.py  save.py  tiles.py
src/tissueviewer/web/assets/: index-91d1895d.js  index-c3a0a24c.css  slideView-7b20516f.js  slideView-7d72869b.css
tests/: conftest.py  test_app_smoke.py  test_cli.py  test_config.py  test_discovery.py  test_validation.py
